--- a/trunk/lotteria/Classes/MenuBody/FindCellView.xib
+++ b/trunk/lotteria/Classes/MenuBody/FindCellView.xib
@@ -294,6 +294,14 @@
 					</object>
 					<int key="connectionID">141</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">newImg</string>
+						<reference key="source" ref="206078282"/>
+						<reference key="destination" ref="34953089"/>
+					</object>
+					<int key="connectionID">150</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -430,7 +438,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">149</int>
+			<int key="maxID">150</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -456,6 +464,7 @@
 							<string>descLabel</string>
 							<string>menuImg</string>
 							<string>nameLabel</string>
+							<string>newImg</string>
 							<string>priceLabel</string>
 							<string>underLine</string>
 						</object>
@@ -464,6 +473,7 @@
 							<string>UILabel</string>
 							<string>UIImageView</string>
 							<string>UILabel</string>
+							<string>UIImageView</string>
 							<string>UILabel</string>
 							<string>UIImageView</string>
 						</object>
@@ -475,6 +485,7 @@
 							<string>descLabel</string>
 							<string>menuImg</string>
 							<string>nameLabel</string>
+							<string>newImg</string>
 							<string>priceLabel</string>
 							<string>underLine</string>
 						</object>
@@ -493,6 +504,10 @@
 								<string key="candidateClassName">UILabel</string>
 							</object>
 							<object class="IBToOneOutletInfo">
+								<string key="name">newImg</string>
+								<string key="candidateClassName">UIImageView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
 								<string key="name">priceLabel</string>
 								<string key="candidateClassName">UILabel</string>
 							</object>
@@ -504,7 +519,7 @@
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/MainBody/FindBodyViewController.h</string>
+						<string key="minorKey">Classes/MenuBody/FindBodyViewController.h</string>
 					</object>
 				</object>
 			</object>
@@ -578,6 +593,20 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">Foundation.framework/Headers/NSURLConnection.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">QuartzCore.framework/Headers/CAAnimation.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">QuartzCore.framework/Headers/CALayer.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
